--- a/views/admin/pages.ejs
+++ b/views/admin/pages.ejs
@@ -8,7 +8,7 @@
 <table class="table table-stripped">
 
     <thead>
-        <tr>
+        <tr class="home">
             <th>Title</th>
             <th>Edit</th>
             <th>Delete</th>
@@ -16,7 +16,7 @@
     </thead>
     <tbody>
         <% pages.forEach(function(page){ %>
-        <tr>
+        <tr id="id_<%= page._id %>" class="<%= page.slug %>">
             <td><%= page.title %></td>
             <td> <a href="/admin/pages/edit-page/<%= page.slug %>">Edit</a></td>
             <% if (page.slug=="home") { %>
@@ -28,5 +28,18 @@
         <% }); %>
     </tbody>
 </table>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+<script>
+    $('tbody').sortable({
+        items: "tr:not('.home')",
+        placeholder: "ui-state-highlight",
+        update: function () {
+            var ids = $('tbody').sortable("serialize");
+            var url = "/admin/pages/reorder-pages";
+
+            $.post(url, ids);
+        }
+    });
+</script>
 
 <%- include('../_layouts/adminfooter')  %>
