category page added

--- a/views/admin/add_category.ejs
+++ b/views/admin/add_category.ejs
@@ -1,7 +1,7 @@
 <%- include('../_layouts/adminheader')  %>
 
-<h2 class="page-title">Add a page</h2>
-<a href="/admin/pages" class="btn btn-primary">Back to all pages</a>
+<h2 class="page-title">Add a category</h2>
+<a href="/admin/categories" class="btn btn-primary">Back to all categories</a>
 <br>
 <br>
 
