--- a/views/_layouts/adminfooter.ejs
+++ b/views/_layouts/adminfooter.ejs
@@ -4,6 +4,8 @@
 <hr>
 <p class="text-center">&COPY; CmsShoppingCart</p>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdn.ckeditor.com/4.11.4/standard/ckeditor.js"></script>
+<script src="/js/main.js"></script>
 </body>
 
 </html>
