--- a/views/admin/edit_page.ejs
+++ b/views/admin/edit_page.ejs
@@ -1,11 +1,11 @@
 <%- include('../_layouts/adminheader')  %>
 
-<h2 class="page-title">Add a page</h2>
+<h2 class="page-title">Edit a page</h2>
 <a href="/admin/pages" class="btn btn-primary">Back to all pages</a>
 <br>
 <br>
 
-<form method="POST" action="/admin/pages/add-page">
+<form method="POST" action="/admin/pages/edit-page/<%= slug %>">
     <div class="form-group">
         <label for="">Title</label>
         <input type="text" class="form-control" name="title" value="<%= title %>" placeholder="Title">
@@ -19,6 +19,7 @@
         <textarea name="content" class="form-control" id="ta" cols="30" rows="10"
             placeholder="Content"><%= content %></textarea>
     </div>
+    <input type="hidden" name="id" value="<%= id %>">
     <button class="btn btn-default">Submit</button>
 </form>
 
