--- a/views/admin/edit_page.ejs
+++ b/views/admin/edit_page.ejs
@@ -5,7 +5,7 @@
 <br>
 <br>
 
-<form method="POST" action="/admin/pages/edit-page/<%= slug %>">
+<form method="POST" action="/admin/pages/edit-page/<%= id %>">
     <div class="form-group">
         <label for="">Title</label>
         <input type="text" class="form-control" name="title" value="<%= title %>" placeholder="Title">
@@ -19,7 +19,6 @@
         <textarea name="content" class="form-control" id="ta" cols="30" rows="10"
             placeholder="Content"><%= content %></textarea>
     </div>
-    <input type="hidden" name="id" value="<%= id %>">
     <button class="btn btn-default">Submit</button>
 </form>
 
