--- a/views/admin/add_product.ejs
+++ b/views/admin/add_product.ejs
@@ -1,24 +1,38 @@
 <%- include('../_layouts/adminheader')  %>
 
-<h2 class="page-title">Add a page</h2>
-<a href="/admin/pages" class="btn btn-primary">Back to all pages</a>
+<h2 class="page-title">Add a product</h2>
+<a href="/admin/products" class="btn btn-primary">Back to all products</a>
 <br>
 <br>
 
-<form method="POST" action="/admin/pages/add-page">
+<form method="POST" action="/admin/products/add-product" enctype="multipart/form-data">
     <div class="form-group">
         <label for="">Title</label>
         <input type="text" class="form-control" name="title" value="<%= title %>" placeholder="Title">
     </div>
     <div class="form-group">
-        <label for="">Slug</label>
-        <input type="text" class="form-control" name="slug" value="<%= slug %>" placeholder="Slug">
+        <label for="">Description</label>
+        <textarea name="desc" class="form-control" cols="30" rows="10" placeholder="Description"><%= desc %></textarea>
     </div>
     <div class="form-group">
-        <label for="">Content</label>
-        <textarea name="content" class="form-control" id="ta" cols="30" rows="10"
-            placeholder="Content"><%= content %></textarea>
+        <label for="">Category</label>
+        <select name="category" class="form-control">
+            <% categories.forEach(function(cat){ %>
+            <option value="<%= cat.slug %>"><%= cat.title %></option>
+            <% }); %>
+        </select>
     </div>
+    <div class="form-group">
+        <label for="">Price</label>
+        <input type="text" class="form-control" name="price" value="<%= price %>" placeholder="Price">
+    </div>
+    <div class="form-group">
+        <label for="">Image</label>
+        <input type="file" class="form-control" name="image" id="img">
+        <img src="#" alt="" id="imgPreview">
+    </div>
+
+
     <button class="btn btn-default">Submit</button>
 </form>
 
