--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -27,9 +27,9 @@
             <td><%= product.category %></td>
             <td>
                 <% if(product.image=="") { %>
-                <img src="/images/noimage.png" alt="" srcset="">
+                <img id="noimage" src="/images/noimage.png" alt="" srcset="">
                 <% } else { %>
-                <img src="/product_images/<%= product._id %>/<%= product.image %>" alt="" srcset="">
+                <img id="noimage" src="/product_images/<%= product._id %>/<%= product.image %>" alt="" srcset="">
                 <% }%>
             </td>
             <td> <a href="/admin/products/edit-product/<%= product._id %>">Edit</a></td>
